Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p>Here's what we recommend for more serious users</p>
 
 <ul>
-<li>Intel Xeon (1 CPU, Quad or better)\</li>
+<li>Intel Xeon (1 CPU, Quad or better)</li>
 <li>4 GB RAM</li>
 <li>SSH/VNC Access</li>
 <li>Latest version of i686 or x86_64 Linux (Any distro that runs Ruby)</li>
