Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a id="what-is-hive-framework" class="anchor" href="#what-is-hive-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Hive Framework</h1>
 
-<p>The Hive Framework is a light-weight framework upon which you can build your own cluster computing program with no knowledge of how the Hive is set up or the underlying OS. All Hive apps are build in the Hivil language, which is kinda like BASIC (remember that?). The Hive Framework is also completely driven on auto-pilot. Just install it on a server, plug it into your network, and you're done! Hive takes care of connecting to other Hive nodes and syncing its status across the network. It's also intelligent enough to balance the workload if the current node is faster (or slower) than the other nodes in the Hive.</p>
+<p>The Hive Framework is a light-weight framework upon which you can build your own cluster computing program with no knowledge of how the Hive is set up or the underlying OS. All Hive apps are built in the Hivil language, which is kinda like BASIC (remember that?). The Hive Framework is also completely driven on auto-pilot. Just install it on a server, plug it into your network, and you're done! Hive takes care of connecting to other Hive nodes and syncing its status across the network. It's also intelligent enough to balance the workload if the current node is faster (or slower) than the other nodes in the Hive.</p>
 
 <h1>
 <a id="how-do-i-get-it" class="anchor" href="#how-do-i-get-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I get it?</h1>
