Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,35 @@
       <h1>
 <a id="what-is-hive-framework" class="anchor" href="#what-is-hive-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Hive Framework</h1>
 
-<p>The Hive Framework is a light-weight framework upon which you can build your own cluster computing program with no knowledge of how the Hive is set up or the underlying OS. All Hive apps are built in the Hivil language, which is kinda like BASIC (remember that?). The Hive Framework is also completely driven on auto-pilot. Just install it on a server, plug it into your network, and you're done! Hive takes care of connecting to other Hive nodes and syncing its status across the network. It's also intelligent enough to balance the workload if the current node is faster (or slower) than the other nodes in the Hive.</p>
+<h2>
+<a id="a-framework-built-for-clusters" class="anchor" href="#a-framework-built-for-clusters" aria-hidden="true"><span class="octicon octicon-link"></span></a>A framework built for clusters</h2>
+
+<p>The Hive Framework is a light-weight framework which allows you to utilize the power of cluster computing without advanced hardware or dealing with complex libraries.</p>
+
+<h2>
+<a id="a-language-for-everyone" class="anchor" href="#a-language-for-everyone" aria-hidden="true"><span class="octicon octicon-link"></span></a>A language for everyone</h2>
+
+<p>All apps that run on the Hive Framework are created in the HIVIL language. It's simple enough that non-technical users like data scientists can get their work done easily, but also allows a greater degree of power to those looking for more.</p>
+
+<h2>
+<a id="add-to-not-replace-your-existing-network" class="anchor" href="#add-to-not-replace-your-existing-network" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add to, not replace your existing network</h2>
+
+<p>Hive Framework supports running your pre-existing applications and performing calculations with the result. Hive Framework also has a simple way to launch HIVIL scripts from your existing applications to easily create cluster-computing functionality with minimum code impact.</p>
+
+<h2>
+<a id="meet-auto-pilot" class="anchor" href="#meet-auto-pilot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Meet Auto-pilot</h2>
+
+<p>The Hive Framework has a module called Auto-Pilot which is here to make your life easier. Unlike other cluster software, Auto-Pilot will automatically connect your node to all the other nodes and manage syncing data across the network. All this without having to modify any settings. It can also figure out how fast (or slow) your node is compared to the rest of the hive and balance the workload accordingly. It can also account for sudden network failure and nodes going offline. Thanks to the synchronized state of HIVIL applications, another node will pick up right where the other node left off.</p>
+
+<h2>
+<a id="no-magic-just-standard-software" class="anchor" href="#no-magic-just-standard-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>No magic, just standard software</h2>
+
+<p>Hive Framework runs on top of the popular Ruby framework. This means you can run any HIVIL program on any computer that runs Ruby with no to minimum code changes. The best part is that Hive Framework has no external dependencies. Just install it to any server running Ruby and run it.</p>
+
+<h2>
+<a id="almost-invisible-footprint" class="anchor" href="#almost-invisible-footprint" aria-hidden="true"><span class="octicon octicon-link"></span></a>Almost invisible footprint</h2>
+
+<p>Hive Framework can run on almost any computer. To prove it, we tested large HIVIL programs on an Intel Pentium III with 256 MB of RAM. Still ran lightning fast despite taking on the entire workload solo. Because of the small footprint, you can turn all of your office computers into nodes and make use of those spare CPU cycles.</p>
 
 <h1>
 <a id="how-do-i-get-it" class="anchor" href="#how-do-i-get-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I get it?</h1>
