Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="what-is-hive-framework" class="anchor" href="#what-is-hive-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Hive Framework</h1>
+<a id="what-is-hive-framework" class="anchor" href="#what-is-hive-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Hive Framework?</h1>
 
 <h2>
 <a id="a-framework-built-for-clusters" class="anchor" href="#a-framework-built-for-clusters" aria-hidden="true"><span class="octicon octicon-link"></span></a>A framework built for clusters</h2>
@@ -57,7 +57,19 @@
 
 <p><strong>DISCLAIMER: HIVE FRAMEWORK IS NOT FINISHED. STABILITY IS NOT GUARANTEED. USE AT YOUR OWN RISK.</strong></p>
 
-<p>Click one of the buttons above to download the latest version. Upon finishing, extract the files to your computer. Next install the latest version of Ruby. Then simply <em>cd</em> into your directory and run</p>
+<p>Click one of the buttons above to download the latest version, or pull it directly from GitHub:</p>
+
+<pre><code>git pull https://github.com/ARMmaster17/HiveFramework
+cd ./HiveFramework
+</code></pre>
+
+<p>If you're SSHing into your headless servers, use this:</p>
+
+<pre><code>wget https://github.com/ARMmaster17/HiveFramework/tarball/master
+tar -zxvf NAME-OF-HIVEFRAMEWORK-TAR.tar.gz
+</code></pre>
+
+<p>Upon finishing, extract the files to your computer. Next install the latest version of Ruby. Then simply <em>cd</em> into your directory and run</p>
 
 <pre><code>ruby ./HiveStart.rb
 </code></pre>
