Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <p>All apps that run on the Hive Framework are created in the HIVIL language. It's simple enough that non-technical users like data scientists can get their work done easily, but also allows a greater degree of power to those looking for more.</p>
 
 <h2>
-<a id="add-to-not-replace-your-existing-network" class="anchor" href="#add-to-not-replace-your-existing-network" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add to, not replace your existing network</h2>
+<a id="add-to-not-replace-your-existing-software" class="anchor" href="#add-to-not-replace-your-existing-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add to, not replace your existing software</h2>
 
-<p>Hive Framework supports running your pre-existing applications and performing calculations with the result. Hive Framework also has a simple way to launch HIVIL scripts from your existing applications to easily create cluster-computing functionality with minimum code impact.</p>
+<p>Hive Framework supports running your pre-existing applications and performing calculations with the result. Hive Framework also has a simple way to launch HIVIL scripts from your existing applications to easily create cluster-computing functionality with minimum code impact. HIVIL also allows you to use your existing data platform. Support for SQL is included, but extensions for other data-retrieval methods can be called through Ruby scripts.</p>
 
 <h2>
 <a id="meet-auto-pilot" class="anchor" href="#meet-auto-pilot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Meet Auto-pilot</h2>
@@ -45,7 +45,7 @@
 <h2>
 <a id="no-magic-just-standard-software" class="anchor" href="#no-magic-just-standard-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>No magic, just standard software</h2>
 
-<p>Hive Framework runs on top of the popular Ruby framework. This means you can run any HIVIL program on any computer that runs Ruby with no to minimum code changes. The best part is that Hive Framework has no external dependencies. Just install it to any server running Ruby and run it.</p>
+<p>Hive Framework runs on top of the popular Ruby framework. This means you can run any HIVIL program on any computer that runs Ruby with no to minimum code changes. The best part is that Hive Framework has no external dependencies. Just install it to any server running Ruby and run it. No Gem-hunting needed.</p>
 
 <h2>
 <a id="almost-invisible-footprint" class="anchor" href="#almost-invisible-footprint" aria-hidden="true"><span class="octicon octicon-link"></span></a>Almost invisible footprint</h2>
